test/classes/initializers/siblingCall/parallelSiblingCall.good
parallelSiblingCall.chpl:5: error: this.init() call in parallel statement
